--- a/patient-up/src/main/resources/templates/patients.html
+++ b/patient-up/src/main/resources/templates/patients.html
@@ -15,7 +15,7 @@
             Liste des patients
         </div>
         <div class="card-body">
-            <form method="get" th:action="@{index}">
+            <form method="get" th:action="@{/user/index}">
                 <label>key word</label>
                 <input type="text" name="keyword" th:value="${keyword}">
                 <button type="submit" class="btn btn-primary">Chercher</button>
@@ -33,13 +33,13 @@
                     <td th:text="${p.dateNaissance}"></td>
                     <td th:text="${p.malade}"></td>
                     <td th:text="${p.score}"></td>
-                    <td>
-                        <a onclick="return confirm('Etes vous sue?')" class="btn btn-danger" th:href="@{delete(id=${p.id}, keyword=${keyword}, page=${currentPage})}">
+                    <td th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
+                        <a onclick="return confirm('Etes vous sue?')" class="btn btn-danger" th:href="@{/admin/delete(id=${p.id}, keyword=${keyword}, page=${currentPage})}">
                             Delete
                         </a>
                     </td>
-                    <td>
-                        <a class="btn btn-success" th:href="@{editPatient(id=${p.id}, keyword=${keyword}, page=${currentPage})}">
+                    <td th:if="${#authorization.expression('hasRole(''ADMIN'')')}" >
+                        <a class="btn btn-success" th:href="@{/admin/editPatient(id=${p.id}, keyword=${keyword}, page=${currentPage})}">
                             Edit
                         </a>
                     </td>
@@ -50,7 +50,7 @@
                 <li th:each="page,status:${pages}">
                     <a th:class="${status.index==currentPage?'btn btn-primary ms-1':'btn btn-outline-primary ms-1'}"
                        th:text="${status.index}"
-                    th:href="@{index(page=${status.index},keyword=${keyword})}"
+                    th:href="@{/user/index(page=${status.index},keyword=${keyword})}"
                     ></a>
                 </li>
             </ul>
