--- a/patient-up/src/main/resources/templates/template1.html
+++ b/patient-up/src/main/resources/templates/template1.html
@@ -17,7 +17,7 @@
                 <a class="nav-link" href="#">Patients</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{index}">Home</a>
+                <a class="nav-link" th:href="@{/user/index}">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" ></a>
@@ -25,16 +25,21 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Patients</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" th:href="@{/formPatients}">Nouveau patient</a></li>
-                    <li><a class="dropdown-item" th:href="@{index}">Chercher patient</a></li>
+                    <li th:if="${#authorization.expression('hasRole(''ADMIN'')')}" ><a class="dropdown-item" th:href="@{/admin/formPatients}">Nouveau patient</a></li>
+                    <li><a class="dropdown-item" th:href="@{/user/index}">Chercher patient</a></li>
                 </ul>
             </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">[Username]</a>
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" th:text="${#authentication.name}"></a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" th:href="@{/formPatients}">logout</a></li>
+                    <li>
+                        <form method="post" th:action="@{/logout}">
+                            <button class="dropdown-item" type="submit">Logout</button>
+                        </form>
+
+                    </li>
                 </ul>
             </li>
         </ul>
